Polishing in WebSocket support